# Empirical_isochrones

./: .coverage  .gitignore  .readthedocs.yaml  Classfile.py  Empirical_iso_reader.py  Isochrone_generation.py  LICENSE  Nurias_clusters.py  Plotting_essentials.py  README.md  Summary_plot.py  Working_SVR_isochrones.py  joblib_testing.py  main.py  mini_cluster_statistics.py  my_utility.py  plot_Extinction.py  plot_Hyperparameters.py  plot_MG1_ladder.py  plot_Meingast1_Pleiades.py  plot_Nuria_cluster_comparison.py  plot_Nuria_clusters.py  plot_PCA_components.py  plot_Pleiades_comparison.py  plot_ScoCen_ladder.py  plot_XYZ_extinction.py  plot_blindspot.py  plot_bootstrapping.py  plot_bootstrapping_v2.py  plot_comparison_CI_CII.py  plot_histograms.py  plot_lower_MS.py  plot_masterplot.py  plot_passband_combis.py  plot_subplot_matrix.py  pre_processing.py  pyproject.toml  requirements.txt  testfile_joblib.py  testfile_weights.py  (+2 more)
EmpiricalArchive/: main.py
Extraction/: Classfile.py  Empirical_iso_reader.py  pre_processing.py
IsoModulator/: Simulation_functions.py  run_simulation_pipe.py
My_tools/: my_utility.py  plotting_essentials.py
PaperI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Plotting/: MG1_Pleiades_gap_analysis.py  plot_PCA_components.py  plot_Photometric_systems.py  plot_Pleiades_comparison.py  plot_ScoCen_ladder.py  plot_age_brackets.py  plot_blindspot.py  plot_bootstrapping.py  plot_empirical_vs_theory.py  plot_errorbins.py  plot_extinction.py  plot_histograms.py  plot_hyperparameters.py  plot_masterplot.py  plot_spatial_distribution.py  (+6 more)
(+60 files in other folders)
