[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PaperI"
version = "0.0.1"
authors = [
    { name="Alena Rottensteiner", email="alena.kristina.rottensteiner@univie.ac.at"},
]
description = "A package for empirical isochrones."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "astropy>=5.1",
    "joblib>=1.2.0",
    "pandas>=1.5.1",
    "matplotlib~=3.5.3",
    "numpy>=1.23.4",
    "plotly>=5.9.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.1.3",
    "seaborn>=0.12.1",
]

[project.urls]
Homepage = "https://github.com/rottenstea/Empirical_isochrones"